# voyage

./: README.md
pytorch/: README.md  pytorch-mastery-checklist.md
pytorch/experiments/: pyproject.toml  tensors.ipynb  tensorts-2.ipynb  torch_check.py  vit-pretrained.py
pytorch/experiments/book-exp/: data-to-tensor.ipynb  gpt2-hf.ipynb
pytorch/experiments/checklist-exp/: mod-0.ipynb  mod-1.1.ipynb  mod-1.2.ipynb  mod-1.ipynb
