[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers[torch]>=0.39.0",
    "h5py>=3.16.0",
    "imageio>=2.37.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.14.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
]

[tool.ruff.lint]
ignore = ["F401"]
